Bug 43700 - ROWS(), COLUMNS() and SHEETS() don't work with external references
Summary: ROWS(), COLUMNS() and SHEETS() don't work with external references
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta0
Hardware: All All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 10:44 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2011-12-10 11:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2011-12-10 10:44:03 UTC
Spreadhsheet functions ROWS() and COLUMNS() don't work with external references, e.g. ROWS('file:///other.ods'#$Sheet1.A1:A3) should return 3 but returns error.