fixed fdo#43700 ROWS(), COLUMNS() and SHEETS() don't work with external references